# superspider

./: .env.example  .flake8  .gitignore  ADVANCED_USAGE_GUIDE.md  CHANGELOG.md  CODE_CHECK_10_ROUNDS.md  CONFIG_VALIDATION.md  CONTRIBUTING.md  CURLCONVERTER_README.md  CURRENT_FRAMEWORK_COMPLETION_REPORT.md  ENCRYPTED_CRAWLING_ENHANCED_V3.md  ENCRYPTED_SITE_CRAWLING_GUIDE.md  FRAMEWORK_DEFECT_AUDIT.md  GITHUB_RELEASE_BODY_v1.0.0.generated.md  GITHUB_RELEASE_BODY_v1.0.0.md  HIDDEN_CAPABILITIES_REPORT.md  LATEST_FRAMEWORK_COMPLETION_REPORT.md  LICENSE  MEDIA_PARITY_REPORT.md  MIGRATION.md  NODE_REVERSE_INTEGRATION_GUIDE.md  PUBLISH_GUIDE.md  PUBLISH_RELEASE_STATUS.md  QUALITY_POLICY.md  README.md  RELEASE_NOTES_v1.0.0.md  ULTIMATE_ENHANCEMENT_GUIDE.md  XPATH_SUPPORT.md  final_verification.ps1  generate_baseline_bundle.py  generate_framework_completion_report.py  generate_framework_deep_surfaces_report.py  generate_framework_scorecard.py  generate_github_release_body.py  generate_maturity_gap_report.py  generate_public_benchmark_site.py  install_curlconverter.bat  logger.js  package.json  publish-to-github.ps1  (+71 more)
.github/: PULL_REQUEST_TEMPLATE.md
checkpoints/: task_0.json
colly/: main.go
contracts/: ecosystem-manifest.json  graph.schema.json  job.schema.json  (+4 more)
rust-spider/: Cargo.toml
rust-spider/.github/workflows/: ci.yml
rust-spider/examples/: advanced_spider.rs  basic_spider.rs  web_spider.rs
rust-spider/src/: lib.rs  main.rs
rust-spider/src/core/: mod.rs  spider.rs
rust-spider/src/distributed/: mod.rs  redis_scheduler.rs
rust-spider/src/downloader/: http_downloader.rs  mod.rs
rust-spider/src/error/: mod.rs  spider_error.rs
rust-spider/src/model/: config.rs  mod.rs  page.rs  request.rs  response.rs  site.rs
rust-spider/src/monitor/: collector.rs  metrics.rs  mod.rs
rust-spider/src/parser/: html_parser.rs  json_parser.rs  mod.rs
rust-spider/src/pipeline/: console_pipeline.rs  file_pipeline.rs  json_pipeline.rs  mod.rs  pipeline.rs
rust-spider/src/pipeline/database/: mod.rs
rust-spider/src/proxy/: mod.rs  proxy_provider.rs
rust-spider/src/scheduler/: bloom_filter.rs  mod.rs  queue_scheduler.rs  scheduler.rs
rust-spider/src/web/: handlers.rs  mod.rs  models.rs  server.rs
rust-spider/static/: index.html
rust-spider/tests/: integration_tests.rs
rustspider/: Cargo.toml  README.md  build.bat  build.sh  enhanced.js  run-framework.bat  run-framework.sh  test-config.yaml  youku_video_20260320_211204.json  youku_video_20260320_211204.txt  youku_video_source.html
rustspider/.cargo/: config.toml
rustspider/benches/: benchmarks.rs
rustspider/docker/: Dockerfile
rustspider/downloads/: video_source.html
rustspider/examples/: README.md  browser_automation.rs  cluster_worker.rs  dynamic_crawler.rs  ecommerce_browser_capture.rs  enhanced.rs  main.rs  playwright_example.rs  scrapy_style.rs  youku_video_downloader.rs  youku_video_spider.rs  youtube_playlist_enhanced.rs
rustspider/examples/ecommerce/: detector.rs  main.rs  profile.rs
rustspider/examples/legacy/: README.md  cluster_worker.rs  dynamic_crawler.rs  enhanced.rs  youku_video_downloader.rs  youku_video_spider.rs  youtube_playlist_enhanced.rs
rustspider/src/: antibot.rs  api.rs  async_research.rs  async_runtime.rs  audit.rs  behavior.rs  browser.rs  checkpoint.rs  checkpoint_test.rs  cli.rs  config.rs  connector.rs  contracts.rs  cookie.rs  crawler_selector.rs  curlconverter.rs  distributed.rs  downloader.rs  enhanced.rs  error.rs  event_bus.rs  events.rs  exporter.rs  feature_gates.rs  graph.rs  incremental.rs  lib.rs  main.rs  media.rs  models.rs  monitor.rs  multithread.rs  node_discovery.rs  notebook_output.rs  parser.rs  playwright.rs  preflight.rs  production_config.rs  proxy.rs  queue.rs  (+11 more)
rustspider/src/advanced/: mod.rs  ultimate.rs
rustspider/src/ai/: ai_client.rs  entity_extractor.rs  mod.rs  sentiment.rs  summarizer.rs
rustspider/src/antibot/: antibot.rs  enhanced.rs  friction.rs  night_mode.rs
rustspider/src/api/: server.rs
rustspider/src/artifact/: mod.rs
rustspider/src/bridge/: crawlee_bridge.rs  mod.rs
rustspider/src/browser/: browser.rs  mod.rs
rustspider/src/captcha/: mod.rs  solver.rs
rustspider/src/core/: rate_limiter_test.rs
rustspider/src/dedup/: mod.rs
rustspider/src/distributed/: mod.rs  node_discovery.rs  redis_client.rs  redis_distributed.rs  worker.rs
rustspider/src/dynamic/: mod.rs  wait.rs
rustspider/src/encrypted/: crawler.rs  enhanced.rs  mod.rs
rustspider/src/extractor/: ai.rs  mod.rs
rustspider/src/ffi/: python.rs
rustspider/src/media/: downloader.rs  ffmpeg_tools.rs  hls_downloader.rs  mod.rs  multiple_platform.rs  video_parser.rs  youtube_downloader.rs
rustspider/src/monitor/: monitor.rs
rustspider/src/node_reverse/: client.rs  mod.rs
rustspider/src/performance/: limiter.rs  mod.rs
rustspider/src/proxy/: proxy.rs
rustspider/src/reactor/: mod.rs
rustspider/src/scheduler/: mod.rs  scheduler.rs
rustspider/src/scrapy/: mod.rs  project.rs
rustspider/src/task/: scheduler.rs
rustspider/src/transformer/: transformer.rs
rustspider/src/video/: drm_detector.rs
rustspider/src/web/: mod.rs
rustspider/tests/: access_friction.rs  ai_cli.rs  antibot_scorecard.rs  artifact_store_scorecard.rs  audit.rs  browser_bridges.rs  browser_examples_scorecard.rs  capability_scorecard.rs  distributed_behavior_scorecard.rs  distributed_lease_contract.rs  distributed_scorecard.rs  downloader_access_friction.rs  ecommerce_profile_examples.rs  events.rs  exporter_scorecard.rs  feature_flags_scorecard.rs  integration_tests.rs  job_contract.rs  monitor_center_scorecard.rs  monitor_scorecard.rs  native_playwright_job.rs  night_mode.rs  nlp_modules.rs  node_discovery.rs  node_reverse_cli.rs  parser_scorecard.rs  preflight_cli.rs  preflight_report_scorecard.rs  preflight_scorecard.rs  proxy_scorecard.rs  queue_backends.rs  queue_scorecard.rs  readme_scorecard.rs  redis_integration.rs  research_runtime.rs  retry_scorecard.rs  scaffold_ai_cli.rs  scheduler_scorecard.rs  scrapy_contract.rs  security_and_export.rs  (+4 more)
rustspider/web/: index.html
(+1235 files in other folders)
