[package]
name = "rust-spider"
version = "2.0.0"
edition = "2021"
authors = ["RustSpider Team"]
description = "A high-performance web crawler framework written in Rust"
license = "MIT"
repository = "https://github.com/rust-spider/rust-spider"
readme = "README.md"
keywords = ["crawler", "spider", "scraper", "web", "async"]
categories = ["web-programming", "asynchronous"]

[features]
default = ["full"]
full = ["async", "json", "proxy", "distributed", "web", "monitoring", "database"]
async = ["tokio", "futures"]
json = ["serde", "serde_json"]
proxy = []
distributed = ["redis"]
web = ["axum", "tower", "tower-http"]
monitoring = ["prometheus"]
database = ["sqlx", "mongodb"]

[dependencies]
# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1.35", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }

# HTML Parsing
scraper = "0.18"
html5ever = "0.26"

# JSON handling
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# URL parsing
url = "2.5"

# Regex
regex = "1.10"

# Proxy support
reqwest-proxy = { version = "0.1", optional = true }

# Redis for distributed crawling
redis = { version = "0.24", optional = true }

# Web framework for UI
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }

# Monitoring
prometheus = { version = "0.13", optional = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite"], optional = true }
mongodb = { version = "2.8", optional = true }

# Utils
lazy_static = "1.4"
parking_lot = "0.12"
md5 = "0.7"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
criterion = "0.5"

[[example]]
name = "basic_spider"
path = "examples/basic_spider.rs"

[[example]]
name = "advanced_spider"
path = "examples/advanced_spider.rs"

[[example]]
name = "web_spider"
path = "examples/web_spider.rs"
required-features = ["web"]

[[bin]]
name = "rust-spider-server"
path = "src/bin/server.rs"
required-features = ["web"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[example]]
name = "basic_spider"
path = "examples/basic_spider.rs"

[[example]]
name = "advanced_spider"
path = "examples/advanced_spider.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
