[package]
name = "rustspider"
version = "1.0.0"
edition = "2021"
authors = ["rustspider team"]
description = "A complete web crawler framework in Rust with media downloading support"

[dependencies]
# HTTP
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
# HTML 解析
scraper = "0.18"
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 异步
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
# 并发
crossbeam-channel = "0.5"
parking_lot = "0.12"
# 日志
log = "0.4"
env_logger = "0.10"
# 浏览器自动化（可选）
fantoccini = { version = "0.21", optional = true }
# URL 解析
url = "2.5"
# 哈希
md-5 = "0.10"
# 时间
chrono = "0.4"
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 随机
rand = "0.8"
# 正则
regex = "1.10"
# SQLite
rusqlite = { version = "0.29", features = ["bundled"] }
# 配置
serde_yaml = "0.9"
# 视频下载（可选）
futures = { version = "0.3", optional = true }
quick-xml = { version = "0.29", features = ["serialize"], optional = true }
clap = { version = "4.3", features = ["derive"], optional = true }
indicatif = { version = "0.17", optional = true }
# Redis（可选）
redis = { version = "0.23", features = ["tokio-comp", "cluster"], optional = true }
# 监控（可选）
prometheus = { version = "0.13", optional = true }
sysinfo = { version = "0.29", optional = true }
# API（可选）
axum = { version = "0.6", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.4", features = ["cors", "trace"], optional = true }
# Web UI
actix-web = { version = "4.4", optional = true }
actix-rt = { version = "2.9", optional = true }
# 工具
which = { version = "4.4", optional = true }
tempfile = { version = "3.8", optional = true }

[features]
default = []
browser = ["fantoccini"]
video = ["futures", "quick-xml", "clap", "indicatif"]
distributed = ["redis"]
api = ["axum", "tower", "tower-http", "prometheus", "sysinfo"]
web = ["actix-web", "actix-rt"]
ai = []
full = ["video", "distributed", "api", "web", "ai"]
