[package]
name = "rustspider"
version = "1.0.0"
edition = "2021"
default-run = "rustspider"
authors = ["Spider Framework Suite Maintainers"]
description = "Rust runtime for the Spider Framework Suite crawler platform"
license = "MIT"
readme = "README.md"

[dependencies]
# HTTP
reqwest = { version = "0.11", features = ["blocking", "json", "stream", "rustls-tls"] }
postgres = "0.19.9"
mysql = "25.0.1"
mongodb = { version = "2.8.2", default-features = false, features = ["sync"] }
# HTML 解析
scraper = "0.18"
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 异步
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
# 并发
crossbeam-channel = "0.5"
parking_lot = "0.12"
# 日志
log = "0.4"
env_logger = "0.10"
# 浏览器自动化（可选）
fantoccini = { version = "0.21", optional = true }
# URL 解析
url = "2.5"
# 哈希
md-5 = "0.10"
sha2 = "0.10"
# 时间
chrono = "0.4"
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 随机
rand = "0.8"
# 正则
regex = "1.10"
# SQLite
rusqlite = { version = "0.29", features = ["bundled"] }
# 配置
serde_yaml = "0.9"
# 异步工具
futures = "0.3"
# 视频下载（可选）
quick-xml = { version = "0.29", features = ["serialize"], optional = true }
clap = { version = "4.3", features = ["derive"], optional = true }
indicatif = { version = "0.17", optional = true }
# Redis（可选）
redis = { version = "0.29.5", features = ["tokio-comp", "cluster"], optional = true }
# 监控（可选）
prometheus = { version = "0.13", optional = true }
sysinfo = { version = "0.29", optional = true }
# API（可选）
axum = { version = "0.6", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.4", features = ["cors", "trace"], optional = true }
# Web UI
actix-web = { version = "4.4", optional = true }
actix-rt = { version = "2.9", optional = true }
# 工具
which = { version = "4.4", optional = true }
tempfile = "3.8"
# JavaScript运行时（使用稳定版本）
deno_core = "0.268"

[[bin]]
name = "jd_iphone17"
path = "src/bin/jd_iphone17.rs"

[[bin]]
name = "ace_downloader"
path = "ace_downloader.rs"

[[bin]]
name = "bilibili_spider_class"
path = "bilibili_spider_class.rs"

[[bin]]
name = "spider_taobao_iphone17"
path = "spider_taobao_iphone17.rs"

[features]
default = ["browser"]
browser = ["fantoccini"]
video = ["quick-xml", "clap", "indicatif"]
distributed = ["redis"]
api = ["axum", "tower", "tower-http", "prometheus", "sysinfo"]
web = ["actix-web", "actix-rt"]
ai = []
full = ["video", "distributed", "api", "web", "ai"]
